# cpp-LIN

./: .clangd  .fusa-iec62443.json  .fusa-reqs.json  .fusa.json  .gitignore  CMakeLists.txt  CODING_STANDARD.md  CONTRIBUTING.md  HARA.md  INCIDENT-RESPONSE.md  LICENSE  README.md  ROADMAP.md  SAFETY_MANUAL.md  SAFETY_PLAN.md  SECURITY.md  SEOOC.md  TARA.md  boundary.mermaid  fmea.json  sas.md  tara.json
.github/: CODEOWNERS
.github/workflows/: ci.yml  dco.yml  release.yml
cli/: CMakeLists.txt  json.hpp  main.cpp
docker/: Dockerfile  docker-compose.yml
include/lin/: channel.hpp  lin.hpp  relay.hpp
include/lin/ldf/: parser.hpp
include/lin/master/: node.hpp
include/lin/safety/: e2e.hpp
include/lin/slave/: node.hpp
include/lin/virtual/: bus.hpp
requirements/: requirements.json
src/: lin.cpp  relay.cpp
src/ldf/: parser.cpp
src/master/: node.cpp
src/safety/: e2e.cpp
src/slave/: node.cpp
src/virtual/: bus.cpp
testdata/relay-vectors/: lin-frame.json
testdata/relay-vectors/errors/: lin-diagnostic-wrong-checksum.json  lin-id-overflow.json
tests/: CMakeLists.txt  test_cli.cpp  test_ldf.cpp  test_lin.cpp  test_master.cpp  test_relay.cpp  test_relay_adapter.cpp  test_safety.cpp  test_slave.cpp  test_virtual.cpp
